drp/db.yml
apiVersion: v1
kind: Service 
metadata:
  name: srv-post
#  namespace: drp
spec:
   selector:
      app: post
   ports:
      - protocol: TCP
        port: 8080
        targetPort: 5432       

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
#  namespace: drp
spec:
   serviceName: srv-post 
   replicas: 3
   selector:
    matchLabels:
      app: post
   template:
    metadata:
      labels:
        app: post
        selector: post
    spec:
      containers:
        - name: postgresql
          image: postgres:10.1-alpine
          ports: 
            - containerPort: 5432
          volumeMounts:
            - name: pvc
              mountPath: /data/db
   volumeClaimTemplates:
      - metadata:
          name: pvc
        spec: 
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
