drp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   ingressClassName: nginx
   rules:
   - host: www.victorsapp.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: srv-dr
            port: 
              number: 80
